# giay-backend

./: .env  .env.example  .gitignore  Cargo.toml  README.md
.agents/: AGENTS.md
api/: Cargo.toml
api/src/: lib.rs  router.rs
api/src/auth/: dto.rs  extractor.rs  handler.rs  jwt.rs  mod.rs  password.rs  router.rs  service.rs  swagger.rs
api/src/core/: config.rs  error.rs  mod.rs  state.rs  swagger.rs
api/src/shared/: ext.rs  extractor.rs  extractors.rs  macros.rs  mod.rs  utils.rs
api/src/user/: dto.rs  handler.rs  mod.rs  router.rs  swagger.rs
api/src/workspace/: dto.rs  ext.rs  extractor.rs  handler.rs  mod.rs  router.rs  service.rs
api/src/workspace/invitation/: dto.rs  handler.rs  service.rs
api/src/workspace/membership/: dto.rs  handler.rs  service.rs
api/src/workspace/workspace/: dto.rs  handler.rs  service.rs
docs/: architecture.md  checklist.md  conventions.md  invitation-plan.md  membership-plan.md  seaorm.md  tenant-based-plan.md
entity/: Cargo.toml
entity/src/: ext.rs  lib.rs  lookups.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  soft_delete.rs  user.rs  user_session.rs  workspace.rs  workspace_bound.rs
entity/src/models/: mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  workspace.rs  workspace_invitation.rs  workspace_membership.rs
mail/: Cargo.toml
mail/src/: lib.rs  mailer.rs
mail/templates/: invitation_email.html
migration/: Cargo.toml
migration/src/: m20220101_000001_create_tables.rs  m20220101_000001_create_user.rs
src/: main.rs
