[package]
name = "giay-rs"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
resolver = "3"
members = [".", "api", "entity", "migration"]

[workspace.dependencies]
sea-orm = {
  version = "~2.0.0-rc",
  features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]
}

[dependencies]
aide = { version = "0.15.1", features = ["axum", "axum-json", "swagger"] }
anyhow = "1"
giay-api = { path = "api" }
migration = { path = "migration" }
schemars = { version = "1.2.1", features = ["uuid1", "chrono04"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
