[package]
name = "giay-api"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "giay_api"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
chrono = "0.4"
dotenvy = "0.15"
entity = { path = "../entity" }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
lettre = "0.11"
mail = { path = "../mail" }
migration = { path = "../migration" }
o2o = { version = "0.5", default-features = false, features = ["syn2"] }
rand_core = { version = "0.10" }
redis = { version = "1", features = ["connection-manager", "tokio-comp"] }
regex = "1.12.4"
sea-orm = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { workspace = true }
validator = { version = "0.20.0", features = ["derive"] }
